Fixing long manual URLs causing title overflow and layout issue for Installers

--- a/rest/compton_styles/downloads.css
+++ b/rest/compton_styles/downloads.css
@@ -15,6 +15,13 @@ a {
     }
 }
 
+.long-text {
+    & fspan {
+        overflow-wrap: anywhere;
+        --ta: unset;
+    }
+}
+
 hr.subtle {
     border-color: var(--c-background)
 }
